k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: example
  name: website
spec:
  replicas: 1
  selector:
    matchLabels:
      project.name: example-website
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        project.name: example-website
    spec:
      volumes:
      - name: website-volume
        persistentVolumeClaim:
          claimName: website-pvc
      containers:
      - name: php-fpm
        image: shingo0620/php:7.3-fpm
        command: ['sh', '-c', 'mv ${PHP_INI_DIR}/php.ini-production $PHP_INI_DIR/php.ini && php-fpm']
        resources: 
          requests:
            memory: "400Mi"
            cpu: "100m"
          # limits:
          #   memory: "2750Mi"
          #   cpu: "750m"
        volumeMounts:
        - mountPath: /var/www/html
          name: website-volume
      - name: web
        image: asia.gcr.io/tellustek-k8s/example/website
        ports:
        - containerPort: 80
        lifecycle:
          postStart:
            exec:
              # command: ['sh', '-c', 'cp -ru /src/. /var/www/html && chown -R 82:82 /var/www/html/*']
              command: ['/bin/sh', '/entrypoint.sh']
        resources:
          requests:
            memory: "100Mi"
            cpu: "25m"
          # limits:
          #   memory: "750Mi"
          #   cpu: "250m"
        volumeMounts:
        - mountPath: /var/www/html
          name: website-volume
