k8s-manifests/service_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: tellustek
  name: website
spec:
  type: NodePort
  selector:
    project.name: tellustek-website
  ports:
  - name: "http"
    port: 80
    targetPort: 80

# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   namespace: tellustek
#   name: website-tls
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURvakNDQW9vQ0NRQ0VGTjRDVVBjZVFqQU5CZ2txaGtpRzl3MEJBUXNGQURDQmtqRUxNQWtHQTFVRUJoTUMKVkZjeER6QU5CZ05WQkFnTUJsZGhibWgxWVRFUE1BMEdBMVVFQnd3R1ZHRnBjR1ZwTVJJd0VBWURWUVFLREFsVQpaV3hzZFhOMFpXc3hEREFLQmdOVkJBc01BMWRsWWpFYU1CZ0dBMVVFQXd3UmF6aHpMblJsYkd4MWMzUmxheTVqCmIyMHhJekFoQmdrcWhraUc5dzBCQ1FFV0ZITm9hVzVuYjBCMFpXeHNkWE4wWldzdVkyOXRNQjRYRFRFNU1URXkKTnpBM05EVXdPRm9YRFRJNU1URXlOREEzTkRVd09Gb3dnWkl4Q3pBSkJnTlZCQVlUQWxSWE1ROHdEUVlEVlFRSQpEQVpYWVc1b2RXRXh [...]
#   tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRGxxa1lSdE9abG9BWGIKVGt1cnAvQVRsSy9QSkI3Skd0OVRhVnYxckorcFZLSlY4c2ErdHJoMEFNc0Q4cWpQRXVUZ2tUZUVCb2w4RS9QNAptLzlZWnlucXZsZkRwaWY5M3kzQ0FFTjJndDFPR215ZGVtaEhKK2VmMWl6WXRaWEtWOWxqcWNscFR0UFJ1a3JnCkR1Rm1JUzF3MGk3SWJpcEJjalFnT0ZJK2xDMFA5OVI0RmRGZW4xcktwcUJVQUxpbTYwdys5MkJJL0VaQmlPVGkKS1lScmZkVDkwYUJhNkpDTEJJOEt4WVkwMTI0cEh4UmFkOStMNFhUZzFQWDM3cGNicGREd2xaemQ3eFFCUDVIOQpkcG5hRkwwZHFxNlp [...]
# type: kubernetes.io/tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: tellustek
  name: website
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  # tls:
  # - hosts:
  #   - k8s.tellustek.com
  #   secretName: website-tls
  rules:
  - host: k8s.tellustek.com
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: 80
  - host: www.tellustek.com
    http:
      paths:
      - backend:
          serviceName: website
          servicePort: 80
